--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,32 @@
 <html>
 
     <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </head>
 
+    <body>
+        <div class="container">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="contianer-fluid">
+                    <ul class="nav navbar-nav">
+                        <li><a href="">jm</a></li>
+                    </ul>
+                </div>
+            </nav>
 
+            <div>
+                {% block content %}
+
+                {% endblock %}
+            </div>
+        </div>
+    </body>
 
 </html>
