models and launch page

--- a/templates/register/index.html
+++ b/templates/register/index.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
-Django
+<h2>Welcome to VM2015 Ancillary Meeting Request Portal</h2>
+
+<div>
+    <ul>
+        <a href=""><input type="submit" value="Login"></a>
+        <a href=""><input type="submit" value="Create an Acount"></a>
+    </ul>
+
+</div>
 
 {% endblock %}
