login app created

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -12,7 +12,7 @@
 <div id="container">
 <hr id="Line1" style="position:absolute;left:1px;top:120px;width:800px;height:1px;z-index:16;">
 <div id="wb_Image1" style="position:absolute;left:1px;top:121px;width:801px;height:222px;z-index:17;">
-    <img src="{% static 'images/banner-interim-hero-preReg-v02.jpg' %}" id="Image1" alt=""></div>
+    <a href="/register"><img src="{% static 'images/banner-interim-hero-preReg-v02.jpg' %}" id="Image1" alt=""></div></a>
 <div id="Layer2" style="position:absolute;text-align:left;left:1px;top:343px;width:801px;height:635px;z-index:18;">
 <div id="wb_Shape6" style="position:absolute;left:535px;top:285px;width:249px;height:35px;z-index:5;">
     <img src="{% static 'images/img0001.gif' %}" id="Shape6" alt="" style="width:249px;height:35px;"></div>
