--- a/templates/register/index.html
+++ b/templates/register/index.html
@@ -7,7 +7,7 @@
 <div>
     <ul>
         <a href=""><input type="submit" value="Login"></a>
-        <a href=""><input type="submit" value="Create an Acount"></a>
+        <a href="/newaccount"><input type="submit" value="Create an Acount"></a>
     </ul>
 
 </div>
