manager/request base added

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -77,9 +77,9 @@
 <div id="wb_Image4" style="position:absolute;left:52px;top:37px;width:272px;height:40px;z-index:0;">
     <img src="{% static 'images/logo-2015-white.png' %}" id="Image4" alt=""></div>
 <div id="wb_Image5" style="position:absolute;left:665px;top:37px;width:67px;height:18px;z-index:1;">
-    <a href="./RequestPortal.html"><img src="{% static 'images/Text1.png' %}" id="Image5" alt=""></a></div>
+    <a href="/request"><img src="{% static 'images/Text1.png' %}" id="Image5" alt=""></a></div>
 <div id="wb_Image3" style="position:absolute;left:665px;top:69px;width:67px;height:18px;z-index:2;">
-    <a href="./ManagerPortal.html"><img src="{% static 'images/Text1.png' %}" id="Image3" alt=""></a></div>
+    <a href="/manager"><img src="{% static 'images/Text1.png' %}" id="Image3" alt=""></a></div>
 <div id="wb_Text10" style="position:absolute;left:557px;top:37px;width:95px;height:16px;z-index:3;text-align:left;">
 <div><span style="color:#F5F5F5;font-family:Arial;font-size:13px;">Request Portal</span></div>
 </div>
