--- a/templates/register/index.html
+++ b/templates/register/index.html
@@ -6,7 +6,7 @@
 
 <div>
     <ul>
-        <a href=""><input type="submit" value="Login"></a>
+        <a href="/login"><input type="submit" value="Login"></a>
         <a href="/newaccount"><input type="submit" value="Create an Acount"></a>
     </ul>
 
