--- a/templates/register/newaccount.html
+++ b/templates/register/newaccount.html
@@ -1,5 +1,13 @@
-{% extends '/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-new account page
+
+<form method="POST" action="">
+    {% csrf_token %}
+    {{new_account.email.label}}&nbsp{{new_account.email}}</br>
+    {{new_account.confirm_email.label}}&nbsp{{new_account.confirm_email}}</br>
+    <input type="submit" value="submit">
+
+</form
+
 {% endblock %}
