--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="contianer-fluid">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">jm</a></li>
+                        <li><a href="/">jm_logo</a></li>
                     </ul>
                 </div>
             </nav>
