--- a/templates/register/newaccount.html
+++ b/templates/register/newaccount.html
@@ -2,17 +2,14 @@
 
 {% block content %}
 
-<form method="POST" action="">
+<!-- <form method="POST" action="">
     {% csrf_token %}
     {{new_account.email.label}}&nbsp{{new_account.email}}</br>
     {{new_account.confirm_email.label}}&nbsp{{new_account.confirm_email}}</br>
     <input type="submit" value="submit">
 
-</form
-
-<div>
+</form> -->
     {% load crispy_forms_tags %}
     {% crispy new_account new_account.helper %}
-</div>
 
 {% endblock %}
