--- a/templates/register/userinfo.html
+++ b/templates/register/userinfo.html
@@ -2,4 +2,13 @@
 
 {% block content %}
 
+<form class="form-inline" action="/register/confirm_data" methods="POST">
+<div class="form-group">
+{% load crispy_forms_tags %}
+{% crispy account_form account_form.helper %}
+<input type="submit" value="submit">
+</div>
+</form>
+
+
 {% endblock %}
