vm_base footer added

--- a/templates/vm_base.html
+++ b/templates/vm_base.html
@@ -67,5 +67,11 @@ $(document).ready(function()
     <a href="/"><img src="{% static 'images/LOGOUT.png' %}" id="Image6" alt=""></a></div>
 </div>
 </div>
+
+<div id="wb_Image2" style="position:absolute;left:1px;top:946px;width:802px;height:32px;z-index:392;">
+    <img src="{% static 'images/AncillaryFooter.PNG' %}" id="Image2" alt=""></div>
+
+
+</div>
 </body>
 </html>
