form validation working

--- a/templates/register/newaccount.html
+++ b/templates/register/newaccount.html
@@ -13,4 +13,5 @@
 
     {% load crispy_forms_tags %}
     {% crispy new_account new_account.helper %}
+    <div id='for-errors'>{{message}}</div>
 {% endblock %}
