--- a/templates/register/confirm_data.html
+++ b/templates/register/confirm_data.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+{% for field in account_form %}
+{{field.label}}&nbsp{{field}}</br>
+{% endfor %}
 confirmation page</br>
 List all the data here, edit or confim buttons</br>
 <a href="/register/final_signup/">confirm</a>
