--- a/templates/register/userinfo.html
+++ b/templates/register/userinfo.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="form-inline" action="/register/confirm_data" methods="POST">
+<form class="form-inline" action="/register/confirm_data/" method="POST">
 <div class="form-group">
 {% load crispy_forms_tags %}
 {% crispy account_form account_form.helper %}
