manager/request portal index set

--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -1,5 +1,18 @@
 {% extends 'vm_base.html' %}
 
 {% block content %}
-manager page
+
+<!-- conteainer for the contenct block -->
+<hr id="Line1" style="position:absolute;left:1px;top:120px;width:800px;height:1px;z-index:390;">
+<div id="Layer2" style="position:absolute;text-align:left;left:2px;top:118px;width:801px;height:858px;z-index:391;">
+<button id="AdvancedButton1" type="button" style="position:absolute;left:24px;top:57px;width:204px;height:34px;z-index:101;" name="" value="">
+<div style="text-align:center"><span style="color:#CED1D6;font-family:Arial;font-size:13px"><b>Submit New Request</b></span></div>
+</button>
+
+
+
+<!-- end div for content block div -->
+</div>
+
+Manager page
 {% endblock %}
