--- a/templates/vm_base.html
+++ b/templates/vm_base.html
@@ -59,6 +59,9 @@ $(document).ready(function()
 </head>
 <body>
 <div id="container">
+
+
+    <!-- Header Details -->
 <div id="Layer1" style="position:absolute;text-align:center;left:0%;top:0px;width:100%;height:118px;z-index:393;">
 <div id="Layer1_Container" style="width:800px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
 <div id="wb_Image4" style="position:absolute;left:52px;top:37px;width:272px;height:40px;z-index:0;">
@@ -68,9 +71,14 @@ $(document).ready(function()
 </div>
 </div>
 
+{% block content %}
+
+{% endblock %}
+
+
+<!-- Footer details -->
 <div id="wb_Image2" style="position:absolute;left:1px;top:946px;width:802px;height:32px;z-index:392;">
     <img src="{% static 'images/AncillaryFooter.PNG' %}" id="Image2" alt=""></div>
-
 
 </div>
 </body>
