request form started

--- a/templates/request/index.html
+++ b/templates/request/index.html
@@ -9,6 +9,75 @@
 <div style="text-align:center"><span style="color:#CED1D6;font-family:Arial;font-size:13px"><b>Submit New Request</b></span></div>
 </button>
 
+<div id="wb_jQueryAccordion1" style="position:absolute;left:24px;top:130px;width:763px;height:547px;z-index:102;">
+<div id="jQueryAccordion1">
+<h3>Meeting 1 - details and status</h3>
+<div>
+<div id="jQueryTabs1" style="position:absolute;left:9px;top:10px;width:726px;height:300px;z-index:28;">
+<ul>
+<li><a href="#jquerytabs1-page-0"><span>Room Details</span></a></li>
+<li><a href="#jquerytabs1-page-1"><span>A/V</span></a></li>
+<li><a href="#jquerytabs1-page-2"><span>Food and Beverage</span></a></li>
+<li><a href="#jquerytabs1-page-3"><span>Billing</span></a></li>
+<li><a href="#jquerytabs1-page-4"><span>Messaging</span></a></li>
+</ul>
+<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-0">
+<div id="wb_Form1" style="position:absolute;left:18px;top:54px;width:675px;height:237px;z-index:26;">
+<form name="MeetingDetails" method="post" action="" enctype="text/plain" id="Form1">
+ <div id="wb_Text1" style="position:absolute;left:5px;top:15px;width:106px;height:16px;z-index:2;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Meeting Title</span></div>
+<input type="text" id="Editbox1" style="position:absolute;left:137px;top:15px;width:187px;height:23px;line-height:23px;z-index:3;" name="Editbox1" value="">
+<div id="wb_Text2" style="position:absolute;left:356px;top:50px;width:106px;height:16px;z-index:4;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Room Name</span></div>
+<input type="text" id="Editbox2" style="position:absolute;left:447px;top:45px;width:198px;height:23px;line-height:23px;z-index:5;" name="Editbox2" value="">
+<div id="wb_Text3" style="position:absolute;left:5px;top:110px;width:106px;height:16px;z-index:6;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Start Date</span></div>
+<input type="text" id="Editbox3" style="position:absolute;left:136px;top:106px;width:188px;height:23px;line-height:23px;z-index:7;" name="Editbox3" value="">
+<div id="wb_Text4" style="position:absolute;left:356px;top:110px;width:106px;height:16px;z-index:8;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">End Date</span></div>
+<input type="text" id="Editbox4" style="position:absolute;left:447px;top:106px;width:198px;height:23px;line-height:23px;z-index:9;" name="Editbox4" value="">
+<div id="wb_Text5" style="position:absolute;left:5px;top:140px;width:106px;height:16px;z-index:10;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Start Time</span></div>
+<input type="text" id="Editbox5" style="position:absolute;left:136px;top:136px;width:188px;height:23px;line-height:23px;z-index:11;" name="Editbox5" value="">
+<div id="wb_Text6" style="position:absolute;left:356px;top:140px;width:106px;height:16px;z-index:12;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">End Time</span></div>
+<input type="text" id="Editbox6" style="position:absolute;left:447px;top:136px;width:198px;height:23px;line-height:23px;z-index:13;" name="Editbox6" value="">
+<div id="wb_Text7" style="position:absolute;left:6px;top:50px;width:106px;height:16px;z-index:14;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Location Name</span></div>
+<input type="text" id="Editbox7" style="position:absolute;left:136px;top:45px;width:188px;height:23px;line-height:23px;z-index:15;" name="Editbox7" value="">
+<div id="wb_Text8" style="position:absolute;left:5px;top:84px;width:106px;height:16px;z-index:16;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Location Address</span></div>
+<input type="text" id="Editbox8" style="position:absolute;left:136px;top:75px;width:188px;height:23px;line-height:23px;z-index:17;" name="Editbox8" value="">
+<div id="wb_Text9" style="position:absolute;left:356px;top:15px;width:106px;height:16px;z-index:18;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Request Date</span></div>
+<input type="text" id="Editbox9" style="position:absolute;left:447px;top:15px;width:198px;height:23px;line-height:23px;z-index:19;" name="Editbox9" value="">
+<div id="wb_Text37" style="position:absolute;left:5px;top:167px;width:131px;height:16px;z-index:20;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Attendance</span></div>
+<input type="text" id="Editbox37" style="position:absolute;left:136px;top:166px;width:188px;height:23px;line-height:23px;z-index:21;" name="Editbox5" value="">
+<input type="text" id="Editbox38" style="position:absolute;left:136px;top:196px;width:188px;height:23px;line-height:23px;z-index:22;" name="Editbox5" value="">
+<div id="wb_Text38" style="position:absolute;left:5px;top:197px;width:131px;height:16px;z-index:23;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Setup Style</span></div>
+<input type="text" id="Editbox45" style="position:absolute;left:447px;top:166px;width:198px;height:23px;line-height:23px;z-index:24;" name="Editbox6" value="">
+<div id="wb_Text45" style="position:absolute;left:356px;top:167px;width:106px;height:16px;z-index:25;text-align:left;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Est. Budget</span></div>
+   
+
+</form>
+</div>
+</div>
+<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-1">
+</div>
+<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-2">
+</div>
+<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-3">
+</div>
+<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-4">
+<textarea name="TextArea1" id="TextArea1" style="position:absolute;left:18px;top:60px;width:700px;height:218px;z-index:27;" rows="12" cols="113">6/15/2015             Further Deatils required
+7/1/2015               I will need early access to the room</textarea>
+</div>
+</div>
+</div>
+
 
 
 <!-- end div for content block div -->
