--- a/static/css/RequestPortal.css
+++ b/static/css/RequestPortal.css
@@ -14,6 +14,12 @@ body
    margin: 0;
    text-align: center;
 }
+span
+{
+   color: #000000;
+   font-family: Arial;
+   font-size: 13px;
+}
 #Layer1
 {
    background-color: #464646;
@@ -113,6 +119,12 @@ body
 #wb_Text1 div
 {
    text-align: left;
+   position:absolute;
+   height:16px;
+   width:166;
+   left:5px;
+   top:15px;
+   z-index:2;
 }
 #Editbox1
 {
