--- a/templates/request/index.html
+++ b/templates/request/index.html
@@ -3,55 +3,39 @@
 {% block content %}
 
 <!-- conteainer for the contenct block -->
-<hr id="Line1" style="position:absolute;left:1px;top:120px;width:800px;height:1px;z-index:390;">
-<div id="Layer2" style="position:absolute;text-align:left;left:2px;top:118px;width:801px;height:858px;z-index:391;">
-<button id="AdvancedButton1" type="button" style="position:absolute;left:24px;top:57px;width:204px;height:34px;z-index:101;" name="" value="">
-    <div style="text-align:center"><span style="color:#CED1D6;font-family:Arial;font-size:13px"><b>Submit New Request</b></span></div>
+<hr id="Line1" >
+<div id="Layer2" >
+<button id="AdvancedButton1" type="button" name="" value="">
+    <div><span><b>Submit New Request</b></span></div>
 </button>
     
-
-<div id="wb_jQueryAccordion1" style="position:absolute;left:24px;top:130px;width:763px;height:547px;z-index:102;">
-<div id="jQueryAccordion1">
-<h3>Meeting 1 - details and status</h3>
-<div>
-<div id="jQueryTabs1" style="position:absolute;left:9px;top:10px;width:726px;height:350px;z-index:28;">
-<ul>
-<li><a href="#jquerytabs1-page-0"><span>Room Details</span></a></li>
-<li><a href="#jquerytabs1-page-1"><span>A/V</span></a></li>
-<li><a href="#jquerytabs1-page-2"><span>Food and Beverage</span></a></li>
-<li><a href="#jquerytabs1-page-3"><span>Billing</span></a></li>
-<li><a href="#jquerytabs1-page-4"><span>Messaging</span></a></li>
-</ul>
-<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-0">
-<div id="wb_Form1" style="position:absolute;left:18px;top:54px;width:675px;height:300px;z-index:26;">
-<form name="MeetingDetails" method="post" action="" enctype="text/plain" id="Form1">
-    {% for form in room_form %}
-    <div id="wb_Text1">
-        <span>{{form.label_tag}}</span>{{form}}
+<div id="meetingForm" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
+    <h3 id="ui-id-1" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-2" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting1</h3>
+    <div id="ui-id-2" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-1" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
     </div>
-    {% endfor %}
+<h3 id="ui-id-3" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-4" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-4" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-3" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
+<h3 id="ui-id-5" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-6" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-6" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-5" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
+<h3 id="ui-id-7" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-8" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-8" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-7" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
 
-</form>
-</div>
-</div>
-<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-1">
-</div>
-<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-2">
-</div>
-<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-3">
-</div>
-<div style="height:260px;overflow:auto;padding:0;" id="jquerytabs1-page-4">
-<textarea name="TextArea1" id="TextArea1" style="position:absolute;left:18px;top:60px;width:700px;height:218px;z-index:27;" rows="12" cols="113">6/15/2015             Further Deatils required
-7/1/2015               I will need early access to the room</textarea>
-</div>
-</div>
-</div>
-
-
-
-
-<!-- end div for content block div -->
+<!-- accordianContianer block div -->
 </div>
 
-request page
 {% endblock %}
