manager index fixed

--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -3,16 +3,39 @@
 {% block content %}
 
 <!-- conteainer for the contenct block -->
-<hr id="Line1" style="position:absolute;left:1px;top:120px;width:800px;height:1px;z-index:390;">
-<div id="Layer2" style="position:absolute;text-align:left;left:2px;top:118px;width:801px;height:858px;z-index:391;">
-<button id="AdvancedButton1" type="button" style="position:absolute;left:24px;top:57px;width:204px;height:34px;z-index:101;" name="" value="">
-<div style="text-align:center"><span style="color:#CED1D6;font-family:Arial;font-size:13px"><b>Submit New Request</b></span></div>
+<hr id="Line1" >
+<div id="Layer2" >
+<button id="AdvancedButton1" type="button" name="" value="">
+    <div><span><b>Submit New Request</b></span></div>
 </button>
+    
+<div id="meetingForm" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
+    <h3 id="ui-id-1" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-2" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting1</h3>
+    <div id="ui-id-2" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-1" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
+<h3 id="ui-id-3" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-4" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-4" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-3" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
+<h3 id="ui-id-5" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-6" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-6" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-5" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
+<h3 id="ui-id-7" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-8" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
+    <div id="ui-id-8" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-7" role="tabpanel" aria-hiden="false">
+        <p>
+        This is paragragph one
+        </p>
+    </div>
 
-
-
-<!-- end div for content block div -->
+<!-- accordianContianer block div -->
 </div>
 
-Manager page
 {% endblock %}
