request index fixed div heights off

--- a/templates/vm_base.html
+++ b/templates/vm_base.html
@@ -18,7 +18,7 @@
                  <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
          <script src="{% static 'js/jquery.ui.tabs.min.js' %}"></script>
          <script>
-             $(fucntion(){
+             $(function(){
                  $('#datepicker').datepicker({dateFormat: 'yy-mm-dd'});
              });
          </script>
