--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -12,9 +12,20 @@
 <div id="meetingForm" class="ui-accordion ui-widget ui-helper-reset" role="tablist">
     <h3 id="ui-id-1" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-2" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting1</h3>
     <div id="ui-id-2" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-1" role="tabpanel" aria-hiden="false">
+        <div id="jQueryTabs1">
+            <ul class="ui-tabs-nav">
+            <li><a href="#jquerytabs1-page-0"><span>Room Details</span></a></li>
+            <li><a href="#jquerytabs1-page-1"><span>A/V</span></a></li>
+            <li><a href="#jquerytabs1-page-2"><span>Food and Beverage</span></a></li>
+            <li><a href="#jquerytabs1-page-3"><span>Billing</span></a></li>
+            <li><a href="#jquerytabs1-page-4"><span>Messaging</span></a></li>
+            </ul>
+        <div>
         <p>
         This is paragragph one
         </p>
+        </div>
+        </div>
     </div>
 <h3 id="ui-id-3" class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top" role="tab" aria-controls="ui-id-4" aria-select="true" aria-expanded="true" tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Meeting 2</h3>
     <div id="ui-id-4" class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active" stlye="display:block; height:119px" arial-labelledby="ui-id-3" role="tabpanel" aria-hiden="false">
