manager portal restarted

--- a/static/css/RequestPortal.css
+++ b/static/css/RequestPortal.css
@@ -1267,14 +1267,14 @@ span
     left:2px;
     top:118px;
     width:801px;
-    height:858px;
+    height:856;
     z-index:391;
 }
 #id-2 #id-4 #id-6 #id-8 {
     display:block;
     height:250;
 }
-input{
+input {
     height:187px;
     height:23px;
 }
